# langModels

./: Dockerfile  README.md  config.json  pyproject.toml
.github/workflows/: deploy.yml  production-deploy.yml  staging-deploy.yml
docs/: user.md
evaluation_function/: dev.json  dev.py  evaluation.py  evaluation_test.py  lazy_load.py
evaluation_function/models/: __init__.py  basic_nn.py  shannon_letters_ngram.py  shannon_letters_single.py
evaluation_function/models/storage/: basic_nn.pt  norvig_letter_single.csv  norvig_word_length_frequencies.csv
