[tool.poetry]
name = "evaluation_function"
version = "0.0.1"
description = ""
authors = ["Andreas Pfurtscheller <andreas.pfurtscheller23@ic.ac.uk>"]
readme = "README.md"
packages = [{ include = "evaluation_function" }]

[tool.poetry.scripts]
evaluation_function = "evaluation_function.main:main"
evaluation_function_dev = "evaluation_function.dev:dev"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.dependencies.torch]
markers = "sys_platform == 'linux'"
source  = "pytorch-cpu"


[tool.poetry.dependencies]
python = ">=3.11,<3.14"

typing_extensions = "^4.12.2"
lf_toolkit = { git = "https://github.com/lambda-feedback/toolkit-python.git", branch = "main", extras = [
    "ipc",
] }

[tool.poetry.group.overrides.dependencies]
# Override sympy because lf-toolkit pins sympy==1.12, 
# but torch>=2.8.0 requires sympy>=1.13.3.
# Remove this once lf-toolkit updates its dependency:
# https://github.com/lambda-feedback/toolkit-python/issues/2
sympy = ">=1.13.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
